--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ h3 {text-align: center}
 }
 
 .btn-warning {
-    padding: 8px 25px;
+    padding: 9px 24px;
     border: 0 none;
     position: relative;
     left: 9px;
@@ -34,4 +34,32 @@ h3 {text-align: center}
 .form-control{
     overflow:auto
         
+}
+.btn-danger{
+    padding: 8px 16px ;
+    border: 0 none;
+    position: relative;
+    left: 9px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+.btn-primary
+{
+     padding: 8px 16px ;
+    border: 0 none;
+    position: relative;
+    left: 5px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+.btn-success{
+    padding: 8px 16px ;
+    border: 0 none;
+    position: relative;
+    left: 5px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
